--- a/app/usuarios.html
+++ b/app/usuarios.html
@@ -127,6 +127,8 @@
                             <th>Nome</th>
                             <th>Usuário</th>
                             <th>Email</th>
+                            <th>Empresa</th>
+                            <th>Loja</th>
                             <th>Função</th>
                             <th>Status</th>
                             <th>Ações</th>
@@ -134,7 +136,7 @@
                     </thead>
                     <tbody id="usuariosTable">
                         <tr>
-                            <td colspan="5" style="text-align: center; padding: 40px;">Carregando...</td>
+                            <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
                         </tr>
                     </tbody>
                 </table>
