--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -692,14 +692,6 @@
                     </svg></span>
                 <span class="nav-text">Dashboard</span>
             </a>
-            <a href="coleta.html" class="nav-item">
-                <span class="nav-icon">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 4h2v16H3zM8 4h1v16H8zM12 4h2v16h-2zM17 4h1v16h-1zM21 4h2v16h-2z" />
-                    </svg>
-                </span>
-                <span class="nav-text">Nova Coleta</span>
-            </a>
             <a href="validade.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
@@ -715,6 +707,14 @@
                             d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" />
                     </svg></span>
                 <span class="nav-text">Produtos</span>
+            </a>
+            <a href="pwa/coleta.html" class="nav-item">
+                <span class="nav-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M3 4h2v16H3zM8 4h1v16H8zM12 4h2v16h-2zM17 4h1v16h-1zM21 4h2v16h-2z" />
+                    </svg>
+                </span>
+                <span class="nav-text">Nova Coleta</span>
             </a>
             <a href="lojas.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
