--- a/app/pwa/coleta.html
+++ b/app/pwa/coleta.html
@@ -14,7 +14,7 @@
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 
     <!-- Library do Scanner -->
     <script src="https://unpkg.com/html5-qrcode"></script>
@@ -428,7 +428,7 @@
 
         <!-- Header -->
         <header class="header-mobile">
-            <a href="dashboard.html" class="back-btn">
+            <a href="../dashboard.html" class="back-btn">
                 <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M15 18l-6-6 6-6" />
                 </svg>
@@ -639,8 +639,8 @@
         </div>
 
         <!-- Scripts -->
-        <script src="../js/supabase.js"></script>
-        <script src="js/coleta.js"></script>
+        <script src="../../js/supabase.js"></script>
+        <script src="coleta.js"></script>
 </body>
 
 </html>
